fixed production companyService tests, also fxed a bug where the list of orders was modified while traversing it, replaced it with a stream